@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-30T08:09:26Z",
-  "count_outdated" : 0,
-  "uniques_outdated" : 0,
-  "count" : 16,
-  "uniques" : 12,
+  "timestamp" : "2022-04-30T16:09:28Z",
+  "count_outdated" : 7,
+  "uniques_outdated" : 5,
+  "count" : 18,
+  "uniques" : 13,
   "clones" : [
-    {
-      "timestamp": "2022-04-16T00:00:00Z",
-      "count": 5,
-      "count_minmax": [ 5, 7 ],
-      "uniques": 4,
-      "uniques_minmax": [ 4, 5 ]
-    },
     {
       "timestamp": "2022-04-19T00:00:00Z",
       "count": 8,
