@@ -1,12 +1,7 @@
 {
-  "count": 16,
-  "uniques": 10,
+  "count": 11,
+  "uniques": 6,
   "clones": [
-    {
-      "timestamp": "2022-04-16T00:00:00Z",
-      "count": 5,
-      "uniques": 4
-    },
     {
       "timestamp": "2022-04-19T00:00:00Z",
       "count": 8,
